--- a/bicicletas/nimbus.html
+++ b/bicicletas/nimbus.html
@@ -38,14 +38,14 @@
        </div>
        <div class="bicicleta container">
            <div class="bicicleta-imagens">
-               <img src="../img/bicicleta/nimbus1.jpg" alt="">
-               <img src="../img/bicicleta/nimbus2.jpg" alt="">
-               <img src="../img/bicicleta/nimbus3.jpg" alt="">
+               <img src="../img/bicicleta/nimbus1.jpg" alt="Bicicleta 1">
+               <img src="../img/bicicleta/nimbus2.jpg" alt="Bicicleta 2">
+               <img src="../img/bicicleta/nimbus3.jpg" alt="Bicicleta 3">
            </div>
            <div class="bicicleta-conteudo">
                <p class="font-2-l cor-5">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
                <div class="bicicleta-comprar">
-                   <a class="botao" href="../orcamento.html">Comprar agora</a>
+                   <a class="botao" href="../orcamento.html?tipo=bikcraft&produto=nimbus">Comprar agora</a>
                    <span class="font-1-xs cor-6"> <img src="../img/icones/entrega.svg" alt=""> entrega em 5 dias</span>
                    <span class="font-1-xs cor-6"> <img src="../img/icones/estoque.svg" alt=""> 18 em estoque</span>
                </div>
@@ -90,14 +90,14 @@
 
     <ul>
         <li>
-         <a href="../magic.html">
+         <a href="../bicicletas/magic.html">
           <img src="../img/bicicletas/magic.jpg" alt="Bicicleta preta">
           <h3 class="font-1-xl">Magic Might</h3>
           <span class="font-2-m cor-8">R$ 2499</span>
          </a>
         </li>
         <li>
-         <a href="../nebula.html">
+         <a href="../bicicletas/nebula.html">
           <img src="../img/bicicletas/nebula.jpg" alt="Bicicleta preta">
           <h3 class="font-1-xl">Nebula Cosmic</h3>
           <span class="font-2-m cor-8">R$ 3999</span>
@@ -156,5 +156,6 @@
              <p class="footer-copy font-2-m cor-6">Bikcraft © Alguns direitos reservados.</p>
          </div>
     </footer>
+<script src="../js/script.js"></script>
 </body>
 </html>
