--- a/contato.html
+++ b/contato.html
@@ -5,13 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contato | Bikcraft</title>
-    <meta name="description" content="Termos e condições.">
+    <meta name="description" content="Contato.">
+    <link rel="shortcut icon" href="favicon.svg" type="image/svg+xml">
     <link rel="stylesheet" href="./css/style.css">
 
     <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet"> -->
-</head>
+
+<script>document.documentElement.classList.add('js');</script>
+</body>
 <body id="contato">
    <header class="header-bg">
        <div class="header container">
