--- a/seguros.html
+++ b/seguros.html
@@ -5,13 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seguros | Bikcraft</title>
-    <meta name="description" content="Seguros">
+    <meta name="description" content="Seguros.">
+    <link rel="shortcut icon" href="favicon.svg" type="image/svg+xml">
     <link rel="stylesheet" href="./css/style.css">
 
     <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet"> -->
-</head>
+<script>document.documentElement.classList.add('js');</script>
+</body>
 <body id="seguros">
    <header class="header-bg">
        <div class="header container">
@@ -39,7 +41,8 @@
        
     
         <div class="seguros container">
-            <div class="seguros-item">
+
+            <div class="seguros-item fadeInLeft" data-anime="200">
                 <h3 class="font-1-xl cor-6">PRATA</h3>
                 <span class="font-1-xl cor-0">R$ 199 <span class="font-1-xs cor-6">mensal</span></span>
                 <ul class="font-2-m cor-0">
@@ -50,7 +53,7 @@
                 </ul>
                 <a  class="botao secundario" href="./orcamento.html?tipo=seguro&produto=prata">Inscreva-se</a>
             </div>
-            <div class="seguros-item">
+            <div class="seguros-item fadeInRight" data-anime="400">
                 <h3 class="font-1-xl cor-p1">OURO</h3>
                 <span class="font-1-xl cor-0">R$ 299 <span class="font-1-xs cor-6">mensal</span></span>
                 <ul class="font-2-m cor-0">
@@ -107,28 +110,28 @@
     <h2 class="font-1-xxl">perguntas frequentes<span class="cor-p1">.</span></h2>
     <dl>
         <div>
-            <dt class="font-1-m-b">Qual forma de pagamento vocês aceitam?</dt>
-            <dd class="font-2-s cor-9">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro.</dd>
+            <dt><button class="font-1-m-b" aria-controls="pergunta1" aria-expanded="true">Qual forma de pagamento vocês aceitam?</button></dt>
+            <dd id="pergunta1" class="font-2-s cor-9 ativa">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro.</dd>
         </div>
         <div>
-            <dt class="font-1-m-b">Qual forma de pagamento vocês aceitam?</dt>
-            <dd class="font-2-s cor-9">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro.</dd>
+            <dt><button class="font-1-m-b" aria-controls="pergunta2" aria-expanded="false">Qual forma de pagamento vocês aceitam?</button></dt>
+            <dd id="pergunta2" class="font-2-s cor-9">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro.</dd>
         </div>
         <div>
-            <dt class="font-1-m-b">Qual forma de pagamento vocês aceitam?</dt>
-            <dd class="font-2-s cor-9">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro.</dd>
+            <dt><button class="font-1-m-b" aria-controls="pergunta3" aria-expanded="false">Qual forma de pagamento vocês aceitam?</button></dt>
+            <dd id="pergunta3" class="font-2-s cor-9">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro.</dd>
         </div>
         <div>
-            <dt class="font-1-m-b">Qual forma de pagamento vocês aceitam?</dt>
-            <dd class="font-2-s cor-9">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro.</dd>
+            <dt><button class="font-1-m-b" aria-controls="pergunta4" aria-expanded="false">Qual forma de pagamento vocês aceitam?</button></dt>
+            <dd id="pergunta4" class="font-2-s cor-9">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro.</dd>
         </div>
         <div>
-            <dt class="font-1-m-b">Qual forma de pagamento vocês aceitam?</dt>
-            <dd class="font-2-s cor-9">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro.</dd>
+            <dt><button class="font-1-m-b" aria-controls="pergunta5" aria-expanded="false">Qual forma de pagamento vocês aceitam?</button></dt>
+            <dd id="pergunta5" class="font-2-s cor-9">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro.</dd>
         </div>
         <div>
-            <dt class="font-1-m-b">Qual forma de pagamento vocês aceitam?</dt>
-            <dd class="font-2-s cor-9">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro.</dd>
+            <dt><button class="font-1-m-b" aria-controls="pergunta6" aria-expanded="false">Qual forma de pagamento vocês aceitam?</button></dt>
+            <dd id="pergunta6" class="font-2-s cor-9">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro.</dd>
         </div>
     </dl>
    </article>
@@ -172,6 +175,8 @@
              <p class="footer-copy font-2-m cor-6">Bikcraft © Alguns direitos reservados.</p>
          </div>
     </footer>
+
+<script src="js/puglins/simple-anime.js"></script>    
 <script src="./js/script.js"></script>
 </body>
 </html>
